--- a/AutosCenter.Models/AutosCenter.Models.csproj
+++ b/AutosCenter.Models/AutosCenter.Models.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.Mvc" Version="5.2.9" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="2.2.0" />
     <PackageReference Include="Microsoft.Build.Framework" Version="17.2.0" />
   </ItemGroup>
 
