Upload product with image

--- a/AutosWorld/AutosWorld.csproj
+++ b/AutosWorld/AutosWorld.csproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\AutosCenter.DataAccess\AutosCenter.DataAccess.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\products\" />
+  </ItemGroup>
+
 </Project>
