--- a/AutosWorld/appsettings.json
+++ b/AutosWorld/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-      "DefaultConnection": "Server=SAMUEL-DEV\\SQLEXPRESS; Database=Autos; Trusted_Connection=True;"
-    }
+    "DefaultConnection": "Server=SAMUEL-DEV\\SQLEXPRESS; Database=Autos; Trusted_Connection=True;",
+    "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=AutosWorld;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
+}
