Create and added roles to users

--- a/AutosWorld/AutosWorld.csproj
+++ b/AutosWorld/AutosWorld.csproj
@@ -30,6 +30,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\AutosCenter.DataAccess\AutosCenter.DataAccess.csproj" />
+    <ProjectReference Include="..\AutosCenter.Utility\AutosCenter.Utility.csproj" />
   </ItemGroup>
 
   <ItemGroup>
